--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,23 +1,36 @@
-<!doctype html>
 <html>
 <head>
-  <title>User Login and Sessions</title>
-  <link rel="stylesheet" type="text/css"
-        href="/app/css/styles.css" />
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script src="/node_modules/socket.io/lib/index.js"></script>
+  <script>
+    $(function(){
+      var iosocket = io.connect();
+
+      iosocket.on('connect', function () {
+        $('#incomingChatMessages').append($('<li>Connected</li>'));
+
+        iosocket.on('message', function(message) {
+          $('#incomingChatMessages').append($('<li></li>').text(message));
+        });
+        iosocket.on('disconnect', function() {
+          $('#incomingChatMessages').append('<li>Disconnected</li>');
+        });
+      });
+
+      $('#outgoingChatMessage').keypress(function(event) {
+        if(event.which == 13) {
+          event.preventDefault();
+          iosocket.send($('#outgoingChatMessage').val());
+          $('#incomingChatMessages').append($('<li></li>').text($('#outgoingChatMessage').val()));
+          $('#outgoingChatMessage').val('');
+        }
+      });
+    });
+  </script>
 </head>
 <body>
-<div class="form-container">
-  <p class="form-header">Sign Up</p>
-  <form method="POST">
-    <label>Username:</label>
-    <input type="text" name="username"><br>
-    <label>Password:</label>
-    <input type="password" name="password"><br>
-    <label>Email:</label>
-    <input type="email" name="email"><br>
-    <input type="submit" value="Register">
-  </form>
-</div>
-<hr><%= msg %>
+Incoming Chat:&nbsp;<ul id="incomingChatMessages"></ul>
+<br />
+<input type="text" id="outgoingChatMessage">
 </body>
 </html>
